--- a/notebooks/featurestore/image_datasets/ImageDatasetFeaturestore.ipynb
+++ b/notebooks/featurestore/image_datasets/ImageDatasetFeaturestore.ipynb
@@ -57,9 +57,9 @@
     "\n",
     "As a first step we can create the training dataset from the hopsworks registry UI. This will create the metadata of the training dataset and also create a folder to store the dataset in HDFS. \n",
     "\n",
-    "![Feature Store Image Dataset 1](./images/image_dataset_tutorial_1.png \"Feature Store Image Dataset 1\")\n",
+    "![Feature Store Image Dataset 1](./../images/image_dataset_tutorial_1.png \"Feature Store Image Dataset 1\")\n",
     "\n",
-    "![Feature Store Image Dataset 2](./images/image_dataset_tutorial_2.png \"Feature Store Image Dataset 2\")"
+    "![Feature Store Image Dataset 2](./../images/image_dataset_tutorial_2.png \"Feature Store Image Dataset 2\")"
    ]
   },
   {
@@ -99,9 +99,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![Feature Store Image Dataset 3](./images/image_dataset_tutorial_3.png \"Feature Store Image Dataset 3\")\n",
+    "![Feature Store Image Dataset 3](./../images/image_dataset_tutorial_3.png \"Feature Store Image Dataset 3\")\n",
     "\n",
-    "![Feature Store Image Dataset 4](./images/image_dataset_tutorial_4.png \"Feature Store Image Dataset 4\")"
+    "![Feature Store Image Dataset 4](./../images/image_dataset_tutorial_4.png \"Feature Store Image Dataset 4\")"
    ]
   },
   {
