move C_test.npy to our test-data

--- a/tensorflow/notebooks/numpy/numpy-hdfs.ipynb
+++ b/tensorflow/notebooks/numpy/numpy-hdfs.ipynb
@@ -16,7 +16,7 @@
    "source": [
     "from hops import hdfs\n",
     "from hops import numpy\n",
-    "data = numpy.load(\"Resources/C_test.npy\")\n",
+    "data = numpy.load(\"TestJob/data/numpy/C_test.npy\")\n",
     "\n",
     "data.shape\n",
     "\n",
