[HOPSWORKS-980] fix pandas/numpy naming conflicts

--- a/notebooks/featurestore/petastorm/PetastormMNIST_CreateDataset.ipynb
+++ b/notebooks/featurestore/petastorm/PetastormMNIST_CreateDataset.ipynb
@@ -206,11 +206,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from hops import numpy as hops_numpy\n",
+    "from hops import numpy_helper as hops_numpy\n",
     "hops_numpy.save(\"mnist/train_img_val.npy\", train_images[0:2])\n",
     "hops_numpy.save(\"mnist/train_lbl_val.npy\", train_labels[0:2])\n",
     "hops_numpy.save(\"mnist/test_img_val.npy\", test_images[0:2])\n",
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +242,7 @@
     "from hops import hdfs\n",
     "import numpy as np\n",
     "from tempfile import TemporaryFile\n",
-    "from hops import numpy as hops_numpy\n",
+    "from hops import numpy_helper as hops_numpy\n",
     "\n",
     "def plot_train_example(example_num):\n",
     "    \"\"\"\n",
