--- a/tensorflow/notebooks/pandas/pandas-hdfs.ipynb
+++ b/tensorflow/notebooks/pandas/pandas-hdfs.ipynb
@@ -10,12 +10,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "from hops import hdfs\n",
-    "from hops import pandas\n",
+    "from hops import pandas_helper as pandas\n",
     "import pandas as pd\n",
     "features = [\"Age\", \"Workclass\", \"fnlwgt\", \"Education\", \"Education-Num\", \"Marital Status\",\n",
     "            \"Occupation\", \"Relationship\", \"Race\", \"Sex\", \"Capital Gain\", \"Capital Loss\",\n",
@@ -31,21 +31,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python-demo_deep_learning_admin000__meb10000",
+   "display_name": "python-demo_featurestore_admin000__meb10000",
    "language": "python",
-   "name": "python-demo_deep_learning_admin000__meb10000"
+   "name": "python-demo_featurestore_admin000__meb10000"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
