--- a/tensorflow/notebooks/numpy/numpy-hdfs.ipynb
+++ b/tensorflow/notebooks/numpy/numpy-hdfs.ipynb
@@ -10,38 +10,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from hops import hdfs\n",
-    "from hops import numpy\n",
+    "from hops import numpy_helper as numpy\n",
     "data = numpy.load(\"TestJob/data/numpy/C_test.npy\")\n",
     "\n",
     "data.shape\n",
     "\n",
     "numpy.save(\"Resources/project-relative-path.npy\", data)\n",
-    "numpy.save(hdfs.project_path() + \"/Resources/full-path.npy\", data)\n"
+    "numpy.save(hdfs.project_path() + \"/Resources/full-path.npy\", data)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "python-demo_deep_learning_admin000__meb10000",
+   "display_name": "python-demo_featurestore_admin000__meb10000",
    "language": "python",
-   "name": "python-demo_deep_learning_admin000__meb10000"
+   "name": "python-demo_featurestore_admin000__meb10000"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
