[HOPSWORKS-1030] copy_to_local bugfixes and removal of localize

--- a/notebooks/featurestore/petastorm/PetastormMNIST_PyTorch.ipynb
+++ b/notebooks/featurestore/petastorm/PetastormMNIST_PyTorch.ipynb
@@ -1015,7 +1015,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Currently PyTorch HDFS support is limited. To get around this we can localize the ps model in the local file system and load it from there using `torch.load`. "
+    "Currently PyTorch HDFS support is limited. To get around this we can download the ps model in the local file system and load it from there using `torch.load`. "
    ]
   },
   {
@@ -1024,7 +1024,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "local_path = hdfs.localize(model_path_hdfs)"
+    "local_path = hdfs.copy_to_local(model_path_hdfs)"
    ]
   },
   {
