--- a/notebooks/featurestore/petastorm/PetastormMNIST_Tensorflow.ipynb
+++ b/notebooks/featurestore/petastorm/PetastormMNIST_Tensorflow.ipynb
@@ -423,7 +423,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In future releases of Tensorflow, Keras will be able to read directly from HDFS, but currently it is not supported. To get around this we can localize the hdf5 model in the local file system and load it from there using `model.load_weights()`. "
+    "In future releases of Tensorflow, Keras will be able to read directly from HDFS, but currently it is not supported. To get around this we can download the hdf5 model in the local file system and load it from there using `model.load_weights()`. "
    ]
   },
   {
@@ -432,7 +432,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "local_path = hdfs.localize(model_path_hdfs)"
+    "local_path = hdfs.copy_to_local(model_path_hdfs)"
    ]
   },
   {
