--- a/tensorflow/notebooks/Filesystem/HopsFSOperations.ipynb
+++ b/tensorflow/notebooks/Filesystem/HopsFSOperations.ipynb
@@ -90,7 +90,7 @@
     "with open('test.txt', 'w') as f:\n",
     "    f.write(\"test\")\n",
     "hdfs.copy_to_hdfs(\"test.txt\", \"Resources\", overwrite=True)\n",
-    "hdfs.copy_to_local(\"Resources/test.txt\", \"\", overwrite=True)\n",
+    "hdfs.copy_to_local(\"Resources/test.txt\", overwrite=True)\n",
     "hdfs_copied_file = hdfs.load(\"Resources/test.txt\")\n",
     "with open('test.txt', 'r') as f:\n",
     "    local_copied_file = f.read()\n",
