--- a/tensorflow/notebooks/Parallel_Experiments/PyTorch/differential_evolution/mnist.ipynb
+++ b/tensorflow/notebooks/Parallel_Experiments/PyTorch/differential_evolution/mnist.ipynb
@@ -98,7 +98,7 @@
     "    if not os.path.exists(os.getcwd() + '/processed'):\n",
     "        hdfs.log('----Downloading dataset to Spark executor working directory----')\n",
     "        #Copy dataset from project to local filesystem\n",
-    "        hdfs.copy_to_local('TestJob/data/mnist/processed', '')\n",
+    "        hdfs.copy_to_local('TestJob/data/mnist/processed')\n",
     "        hdfs.log('----------------------Download finished------------------------')\n",
     "    train_loader = torch.utils.data.DataLoader(\n",
     "        datasets.MNIST(os.getcwd(), train=True, download=False,\n",
