[HOPSWORKS-1062] upgrade petastorm to 0.7.2
- upgrade and bugfixes for new pyarrow release

--- a/notebooks/featurestore/petastorm/PetastormHelloWorld.ipynb
+++ b/notebooks/featurestore/petastorm/PetastormHelloWorld.ipynb
@@ -57,24 +57,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "from hops import hdfs, featurestore\n",
+    "import pyarrow as pa\n",
+    "import random\n",
+    "import pandas as pd\n",
+    "from pyspark.sql import SQLContext, Row\n",
+    "from pyspark.sql.types import StructType, StructField, IntegerType\n",
+    "\n",
+    "# IMPORTANT: must import  tensorflow before petastorm.tf_utils due to a bug in petastorm\n",
+    "import tensorflow as tf\n",
     "from petastorm.unischema import dict_to_spark_row, Unischema, UnischemaField\n",
     "from petastorm.codecs import ScalarCodec, CompressedImageCodec, NdarrayCodec\n",
     "from pyspark.sql.types import StructType, StructField, IntegerType\n",
-    "import numpy as np\n",
-    "from hops import hdfs\n",
-    "import pyarrow as pa\n",
     "from petastorm.etl.dataset_metadata import materialize_dataset\n",
     "from petastorm.spark_utils import dataset_as_rdd\n",
     "from petastorm import make_reader\n",
     "from petastorm.tf_utils import tf_tensors, make_petastorm_dataset\n",
-    "import tensorflow as tf\n",
     "from petastorm.pytorch import DataLoader\n",
-    "from pyspark.sql import Row\n",
-    "import random\n",
-    "from petastorm import make_batch_reader\n",
-    "import pandas as pd\n",
-    "from pyspark.sql import SQLContext\n",
-    "from hops import featurestore"
+    "from petastorm import make_batch_reader"
    ]
   },
   {
