--- a/notebooks/featurestore/petastorm/PetastormMNIST_CreateDataset.ipynb
+++ b/notebooks/featurestore/petastorm/PetastormMNIST_CreateDataset.ipynb
@@ -48,6 +48,9 @@
     "import pydoop\n",
     "import gzip\n",
     "from tempfile import TemporaryFile\n",
+    "\n",
+    "# IMPORTANT: must import  tensorflow before petastorm.tf_utils due to a bug in petastorm\n",
+    "import tensorflow as tf\n",
     "from petastorm.unischema import dict_to_spark_row, Unischema, UnischemaField\n",
     "from pyspark.sql.types import StructType, StructField, IntegerType\n",
     "from petastorm.codecs import ScalarCodec, CompressedImageCodec, NdarrayCodec"
