--- a/notebooks/featurestore/petastorm/PetastormMNIST_PyTorch.ipynb
+++ b/notebooks/featurestore/petastorm/PetastormMNIST_PyTorch.ipynb
@@ -49,21 +49,21 @@
     }
    ],
    "source": [
-    "from hops import hdfs, featurestore\n",
+    "from hops import hdfs, featurestore, experiment, tensorboard\n",
     "import numpy as np\n",
     "import pydoop\n",
-    "from petastorm import make_reader\n",
-    "from petastorm.tf_utils import tf_tensors, make_petastorm_dataset\n",
+    "import json\n",
+    "\n",
+    "# Must import pyarrow before torch. See: https://github.com/uber/petastorm/blob/master/docs/troubleshoot.rst\n",
+    "import pyarrow as pa\n",
     "import torch\n",
     "import torch.nn as nn\n",
-    "from hops import experiment\n",
     "import torch.optim as optim\n",
     "from torchvision import transforms\n",
     "import torch.nn.functional as F\n",
-    "from petastorm.pytorch import DataLoader\n",
-    "from hops import tensorboard\n",
-    "from hops import hdfs\n",
-    "import json"
+    "from petastorm import make_reader, TransformSpec\n",
+    "from petastorm.tf_utils import make_petastorm_dataset\n",
+    "from petastorm.pytorch import DataLoader"
    ]
   },
   {
