--- a/notebooks/featurestore/petastorm/PetastormMNIST_Tensorflow.ipynb
+++ b/notebooks/featurestore/petastorm/PetastormMNIST_Tensorflow.ipynb
@@ -56,17 +56,17 @@
     }
    ],
    "source": [
-    "from hops import hdfs, featurestore\n",
+    "from hops import hdfs, featurestore, tensorboard, experiment\n",
+    "\n",
+    "# IMPORTANT: must import tensorflow before petastorm.tf_utils due to a bug in petastorm\n",
+    "import tensorflow as tf\n",
+    "from tensorflow import keras\n",
+    "from tensorflow.python.keras.callbacks import TensorBoard\n",
+    "import json\n",
     "import numpy as np\n",
     "import pydoop\n",
     "from petastorm import make_reader\n",
-    "from petastorm.tf_utils import tf_tensors, make_petastorm_dataset\n",
-    "import tensorflow as tf\n",
-    "from hops import tensorboard\n",
-    "from tensorflow import keras\n",
-    "from hops import experiment\n",
-    "from tensorflow.python.keras.callbacks import TensorBoard\n",
-    "import json"
+    "from petastorm.tf_utils import tf_tensors, make_petastorm_dataset"
    ]
   },
   {
