[HOPSWORKS-1025] add Hive Partitioning support for feature groups
- Update tour example to show how to specify hive partitions of feature groups

--- a/notebooks/featurestore/FeaturestoreTourPython.ipynb
+++ b/notebooks/featurestore/FeaturestoreTourPython.ipynb
@@ -81,7 +81,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>8</td><td>application_1550835076939_0010</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8088/proxy/application_1550835076939_0010/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e01_1550835076939_0010_01_000001/demo_featurestore_admin000__meb10000\">Link</a></td><td>✔</td></tr></table>"
+       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th><th>Current session?</th></tr><tr><td>25</td><td>application_1555980784524_0028</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8088/proxy/application_1555980784524_0028/\">Link</a></td><td><a target=\"_blank\" href=\"http://hopsworks0.logicalclocks.com:8042/node/containerlogs/container_e01_1555980784524_0028_01_000001/demo_featurestore_admin000__meb10000\">Link</a></td><td>✔</td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -1069,6 +1069,258 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Featuregroup Partitioning \n",
+    "\n",
+    "Featuregroups are stored as Hive tables, meaning that they can be partitioned for improved **read-query** performance. We use dynamic partitioning where the partition keys are specified on creation of a featuregroup. To set the partitions, simply specify the `partition_by` argument to `create_featuregroup()`. The `partition_by` argument should be set as a python list of the columns that you want to partition the table on, see examples below.\n",
+    "\n",
+    "Partitioning is not supported for training datasets as those are meant to be immutable blobs used for training (e.g petastorm or tfrecords), and do not need to be optimized for query performance. \n",
+    "\n",
+    "Feature groups in Hive might need to be read-query optimized however, since it might be used to create a lot of different training datasets, using different subsets of features."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As an example we can take the `games_features` featuregroup created by the featurestore tour and re-create it as a new featuregroup called `games_features_partitioned` where we partition on the `score` column."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running sql: use demo_featurestore_admin000_featurestore\n",
+      "Running sql: SELECT * FROM games_features_1"
+     ]
+    }
+   ],
+   "source": [
+    "games_features_df = featurestore.get_featuregroup(\"games_features\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running sql: use demo_featurestore_admin000_featurestore\n",
+      "Feature group created successfully"
+     ]
+    }
+   ],
+   "source": [
+    "featurestore.create_featuregroup(\n",
+    "    games_features_df,\n",
+    "    \"games_features_partitioned\",\n",
+    "    description=\"games_features partitioned by score\",\n",
+    "    descriptive_statistics=False,\n",
+    "    feature_correlation=False,\n",
+    "    feature_histograms=False,\n",
+    "    cluster_analysis=False,\n",
+    "    partition_by=[\"score\"]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can also partition on multiple columns (watch out so that the number of partitions don't get too many though). Also note that it is not allowed to partition on the primary key, which does not make sense either since the primary key should be unique. If you try to partition on the primary key, the partitioning will simply be skipped. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running sql: use demo_featurestore_admin000_featurestore\n",
+      "Feature group created successfully"
+     ]
+    }
+   ],
+   "source": [
+    "featurestore.create_featuregroup(\n",
+    "    games_features_df,\n",
+    "    \"games_features_double_partitioned\",\n",
+    "    description=\"games_features partitioned by score and away_team_id\",\n",
+    "    descriptive_statistics=False,\n",
+    "    feature_correlation=False,\n",
+    "    feature_histograms=False,\n",
+    "    cluster_analysis=False,\n",
+    "    partition_by=[\"score\", \"home_team_id\"]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To verify the partitions we can use the utility function `get_featuregroup_partitions`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running sql: use demo_featurestore_admin000_featurestore\n",
+      "Running sql: SHOW PARTITIONS games_features_partitioned_1\n",
+      "+---------+\n",
+      "|partition|\n",
+      "+---------+\n",
+      "|  score=1|\n",
+      "|  score=2|\n",
+      "|  score=3|\n",
+      "+---------+"
+     ]
+    }
+   ],
+   "source": [
+    "featurestore.get_featuregroup_partitions(\"games_features_partitioned\").show(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running sql: use demo_featurestore_admin000_featurestore\n",
+      "Running sql: SHOW PARTITIONS games_features_double_partitioned_1\n",
+      "+--------------------+\n",
+      "|           partition|\n",
+      "+--------------------+\n",
+      "|home_team_id=1/sc...|\n",
+      "|home_team_id=1/sc...|\n",
+      "|home_team_id=10/s...|\n",
+      "|home_team_id=10/s...|\n",
+      "|home_team_id=10/s...|\n",
+      "|home_team_id=11/s...|\n",
+      "|home_team_id=11/s...|\n",
+      "|home_team_id=11/s...|\n",
+      "|home_team_id=12/s...|\n",
+      "|home_team_id=12/s...|\n",
+      "+--------------------+\n",
+      "only showing top 10 rows"
+     ]
+    }
+   ],
+   "source": [
+    "featurestore.get_featuregroup_partitions(\"games_features_double_partitioned\").show(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You can also specify the optional arguments for `get_featuregroup_partitions`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running sql: use demo_featurestore_admin000_featurestore\n",
+      "Running sql: SHOW PARTITIONS games_features_partitioned_1\n",
+      "+---------+\n",
+      "|partition|\n",
+      "+---------+\n",
+      "|  score=1|\n",
+      "|  score=2|\n",
+      "|  score=3|\n",
+      "+---------+"
+     ]
+    }
+   ],
+   "source": [
+    "featurestore.get_featuregroup_partitions(\"games_features_partitioned\",\n",
+    "                                         featurestore=featurestore.project_featurestore(),\n",
+    "                                         featuregroup_version = 1,\n",
+    "                                         dataframe_type=\"spark\").show(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "When you overwrite a table, it will pick up the old partitioning scheme it had before the overwrite: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "computing descriptive statistics for : games_features_partitioned\n",
+      "computing feature correlation for: games_features_partitioned\n",
+      "computing feature histograms for: games_features_partitioned\n",
+      "computing cluster analysis for: games_features_partitioned\n",
+      "Running sql: use demo_featurestore_admin000_featurestore"
+     ]
+    }
+   ],
+   "source": [
+    "featurestore.insert_into_featuregroup(games_features_df, \"games_features_partitioned\", mode=\"overwrite\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running sql: use demo_featurestore_admin000_featurestore\n",
+      "Running sql: SHOW PARTITIONS games_features_partitioned_1\n",
+      "+---------+\n",
+      "|partition|\n",
+      "+---------+\n",
+      "|  score=1|\n",
+      "|  score=2|\n",
+      "|  score=3|\n",
+      "+---------+"
+     ]
+    }
+   ],
+   "source": [
+    "featurestore.get_featuregroup_partitions(\"games_features_partitioned\").show(10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Inserting Into Existing Feature Groups\n",
     "\n",
     "A best practice when working with features in HopsML is to first figure out a model of feature groups and create them  using the Feature Registry UI. This will prepare the feature group schema and create the Hive tables. Once the empty feature groups are created, then you can insert into these tables directly."
@@ -1083,7 +1335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
