--- a/notebooks/hive/PyHive.ipynb
+++ b/notebooks/hive/PyHive.ipynb
@@ -14,14 +14,14 @@
     "In this example we show how to explore data in Hive and build reports.\n",
     "\n",
     "The example uses a dataset of real estate sales in the Sacramento area, which you can download from [here](http://snurran.sics.se/hops/hive/Sacramentorealestatetransactions.csv).\n",
-    "Create a dataset in your project (without README.md) and upload the CSV file in there.\n",
+    "Create a dataset with a name of your choosing, for example `RawData` and upload the CSV file. Make sure the dataset is empty, you will need to delete the auto-generated README.md\n",
     "\n",
-    "First thing we need to setup the IPython magic and the connection information by running the following cell:"
+    "First we need to setup the IPython magic and the connection information by running the following cell:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's first create an Hive external and let's point the table to the just created dataset. In the query below you should replace `[Projectname]` with your project name.\n",
+    "Let's first create a Hive external and let's point the table to the just created dataset. In the query below you should replace `[Projectname]` with your project name.\n",
     "\n",
     "The `%%sql` magic allows you to write HiveQL and execute the query against the HiveServer."
    ]
@@ -75,12 +75,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To make sure the creation succeded we can list all the tables in the project's database with and run a simple query agains the external table"
+    "To make sure the table was created successfully, we can list all the tables in the project's database and run a simple query against the external table."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -106,10 +106,10 @@
        "</table>"
       ],
       "text/plain": [
-       "[('sacramento_properties',), ('sacramento_properties_ext',)]"
+       "[('sacramento_properties',)]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +304,7 @@
        " ('7325 10TH ST', 'RIO LINDA', 95673, 'CA', 3, 2, 1146.0, 'Residential', 'Wed May 21 00:00:00 EDT 2008', 98937.0, 38.70091, -121.44298)]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +396,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "By default we don't allow dynamic inserts. This means that we should specify, for which row, which partition it belongs to. This to avoid that a mistake in the insert query creates a huge number of directories. \n",
+    "By default we don't allow dynamic inserts. This means that we should specify, for each row, which partition it belongs to. This is meant to avoid having a wrong insert query create a huge number of directories. \n",
     "\n",
     "In this case, however, the dataset is small and we know what we are doing. In the next cell we configure the hive session to allow nonstrict dymanic insert."
    ]
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +616,7 @@
        " ('4622 MEYER WAY', 'CARMICHAEL', 'CA', 4, 2, 1559.0, 'Residential', 'Mon May 19 00:00:00 EDT 2008', 285000.0, 38.64913, -121.31067, 95608)]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -626,6 +626,54 @@
     "select * \n",
     "FROM sacramento_properties \n",
     "WHERE zip=95608\n",
+    "LIMIT 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Done.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "    <tr>\n",
+       "        <th>sales_type</th>\n",
+       "        <th>avg_price</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>Condo</td>\n",
+       "        <td>190544.66666666666</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "        <td>Residential</td>\n",
+       "        <td>314238.8823529412</td>\n",
+       "    </tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "[('Condo', 190544.66666666666), ('Residential', 314238.8823529412)]"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%sql\n",
+    "select sales_type, avg(price) as avg_price\n",
+    "FROM sacramento_properties \n",
+    "WHERE zip=95608\n",
+    "GROUP BY sales_type\n",
     "LIMIT 10"
    ]
   },
@@ -640,9 +688,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The result of the query can also be stored in a Python dictionary. This allows us to use the vast library of python library to visualise the data and build reports.\n",
+    "The query result can also be stored in a Python dictionary. This enables us to choose from a plethora of Python libraries available online, to visualize data and build BI reports\n",
     "\n",
-    "In the example below we use the folium library to mark where the Condos in our dataset are located in Sacramento. For the next section to work, if you haven't already, please install the folium package in your project environment and restart the kernel. (Also please re-run the first cell)"
+    "In the example below we use the folium library to mark where the Condos in our dataset are located in Sacramento. For the next section to work, if you haven't already, please install the folium package in your project environment and restart the kernel. (Also, please re-run the first cell)\n",
+    "\n",
+    "(Internet access is required to visualize the map)"
    ]
   },
   {
