Remove sacramento_properties from show table cell

--- a/notebooks/hive/PyHive.ipynb
+++ b/notebooks/hive/PyHive.ipynb
@@ -98,15 +98,12 @@
        "        <th>tab_name</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "        <td>sacramento_properties</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "        <td>sacramento_properties_ext</td>\n",
        "    </tr>\n",
        "</table>"
       ],
       "text/plain": [
-       "[('sacramento_properties',)]"
+       "[('sacramento_properties_ext',)]"
       ]
      },
      "execution_count": 22,
